home design done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <app-error *ngIf='loginStatus'></app-error>
 <app-header></app-header>
 <router-outlet (activate)="onActivate($event)"></router-outlet>
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
 
 
 <section id="popUp">
