--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,11 +2,11 @@
   <div class="container h-100vh d-flex align-items-center">
     <div class="col">
       <div class="row justify-content-center">
-        <div class="col-md-6 col-lg-5 col-xl-4">
+        <div class="col-md-6 col-lg-5 col-xl-5">
           <div>
             <div class="mb-5 text-center">
-              <h3 class="font-weight-900">Login</h3>
-              <p class="lead-100 mb-0">Your journey start in a minute</p>
+              <h3 class="font-weight-900">Student Login</h3>
+              <p class="lead-100 mb-0 text-sm">Automated Student Accommodation Booking System</p>
             </div>
             <span class="clearfix"></span>
             <app-loginLayout></app-loginLayout>
