--- a/src/app/login/loginLayout/loginLayout.component.html
+++ b/src/app/login/loginLayout/loginLayout.component.html
@@ -9,7 +9,7 @@
                 <input 
                 formControlName="clientEmail"
                 type="text"
-                class="form-control form-control-sm input-group-text" 
+                class="form-control form-control-sm input-group-text text-primary font-weight-bold" 
                 placeholder="name@example.com"
                 name=' formControlName="merchantBizName"'
                 autocomplete="off">
@@ -28,7 +28,7 @@
                 <input 
                 formControlName="clientPW"
                 [type]="showPassword_boolean ? 'text' : 'password'"
-                class="form-control form-control-sm input-group-text" 
+                class="form-control form-control-sm input-group-text text-primary font-weight-bold" 
                 placeholder="Password"
                 name='password'
                 autocomplete="off">
