--- a/src/scss/custom/_variables.scss
+++ b/src/scss/custom/_variables.scss
@@ -21,8 +21,8 @@
 // uncomment and replace the $font and $font-family-custom-sans-serif value with any URL and font family name from Google Fonts
 //
 
-$font: "https://fonts.googleapis.com/css?family=Nunito:300,400,600,700" !default;
-$font-family-custom-sans-serif: "Nunito", sans-serif !default;
+$font: "https://fonts.googleapis.com/css?family=Poppins:300,400,600,700" !default;
+$font-family-custom-sans-serif: "Poppins", sans-serif !default;
 $font-family-base: $font-family-custom-sans-serif !default;
 
 // Custom variables
