--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,22 +5,22 @@
       <div class="container">
         <div class="col">
           <div class="row">
-            <div class="col-xl-5 col-lg-6 align-self-center">
+            <div class="col-6 align-self-center">
               <h1 class="font-weight-900 text-white mb-4 display-3" style="text-shadow: 0px 0px 6px #7e6a58;">Roomy</h1>
-              <p class="lead lh-180 text-white font-weight-bold" style="text-shadow: 0px 0px 4px #7e6a58;">Roomy is an
-                <span class="text-dark" style="text-shadow: 0px 0px 0px #7e6a58;">automated student accommodation booking system</span>
-                that take room booking to the next level.</p>
+              <p class="lead lh-180 text-white font-weight-bold" style="text-shadow: 0px 0px 4px #7e6a58;">Roomy is an <br>
+                <span class="text-dark" style="text-shadow: 0px 0px 0px #7e6a58;">Automated Student Accommodation Booking System</span>
+                <br>that takes room booking to the next level.</p>
               <div class="mt-5">
                 <div class="card-group text-center">
                   <div class="card bg-gradient-primary p-3 border-0 shadow-primary">
-                    <a href="#" class="hover-translate-y-n3">
+                    <a href="javascript:void(0)" class="hover-translate-y-n3" [routerLink]="['/singleBooking']">
                       <div class="card-body">
-                        <h5 class="h4 text-white m-0">Book for ownself</h5>
+                        <h5 class="h4 text-white m-0">Book individually</h5>
                       </div>
                     </a>
                   </div>
                   <div class="card bg-gradient-dark p-3 border-0 shadow-primary">
-                    <a href="#" class="hover-translate-y-n3">
+                    <a href="javascript:void(0)" class="hover-translate-y-n3" [routerLink]="['/bulkBooking']">
                       <div class="card-body">
                         <h5 class="h4 text-white m-0">Book with friends</h5>
                       </div>
@@ -29,7 +29,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 ml-lg-auto align-self-end">
+            <div class="col-6 ml-lg-auto align-self-end">
               <div class="position-relative" style="z-index: 10;">
                 <img alt="Image placeholder" src="assets/img/1554481096-visuel-header-messenger2.png"
                   class="img-fluid img-center">
