--- a/src/app/moduleBooking/bulkBooking/bulkBooking.component.html
+++ b/src/app/moduleBooking/bulkBooking/bulkBooking.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container-fluid vh-100 bg-white d-flex align-items-center">
   <div class="container">
     <section class="slice slice-xl">
